# book-management-api

./: .env.example  .gitignore  API_CODE_EXAMPLES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_INFO.md  Dockerfile  FRONTEND_DEVELOPER_GUIDE.md  MIGRATION.md  PROJECT_REPORT.html  PROJECT_REPORT.md  RBAC.md  README.md  SETUP.md  book_management_rbac.csv  docker-compose.yml  list_models.py  main.py  pyproject.toml  pytest.ini  render.yaml  test_gemini_api.py  verify_fts.sh
.github/workflows/: README.md  ci.yml  deploy.yml  tests.yml
alembic/: env.py
alembic/versions/: 692eb6e03559_add_trigram_indexes_for_description_.py  9d1901b3d623_initial_schema.py  aa376f4a6cc4_add_rag_documents_table_for_rbac.py
chroma_db/40a9904d-0465-400b-b6e2-479c1eeae058/: index_metadata.pickle
scripts/: docker_instructions.md  init_database.py  manual_testing.md  migration_instructions.md  test_live_server.py  test_rbac_complete.py  test_review_restriction.py
src/api/: dependencies.py
src/core/: __init__.py  database.py
src/model/: __init__.py  book.py  borrowing.py  rag_document.py  review.py  role.py  user.py
src/repository/: __init__.py  base.py  book.py  borrowing.py  rag_document.py  review.py  role.py  user.py
src/schema/: __init__.py  auth.py  book.py  borrowing.py  common.py  rag_models.py  review.py  role.py  user.py
src/service/: __init__.py  ai.py  ai_search.py  auth.py  book.py  borrowing.py  embedding_service.py  pdf_service.py  rag_client.py  rag_document.py  review.py  user.py  vector_store.py
tests/: README.md  conftest.py  test_text_chunker.py
(+26 files in other folders)
